@@ -28,17 +28,15 @@ $HTML->header(array('title'=>$Language->getText('top','title')));
 <li><a href="mostactive.php?type=week"><?php echo $Language->getText('top','active_weekly'); ?></a>
 <li><a href="mostactive.php"><?php echo $Language->getText('top','active_all_time'); ?></a>
 <br />&nbsp;
+<li><a href="toplist.php?type=pageviews_proj">Top Project Page Views</a> 
+<li><a href="toplist.php?type=forumposts_week"><?php echo $Language->getText('top','forum_posts'); ?></a>
+
 <!--
 <li><a href="toplist.php?type=downloads"><?php echo $Language->getText('top','downloads'); ?></a>
 <li><a href="toplist.php?type=downloads_week"><?php echo $Language->getText('top','downloads_7_days'); ?></a>
-<br />&nbsp;
-Measured by impressions of the <?php echo $GLOBALS['sys_name']?> 'button' logo
-<li><a href="toplist.php?type=pageviews_proj"><?php echo $Language->getText('top','pageviews',$GLOBALS['sys_name']); ?></a> 
-<br />&nbsp;
-<br />&nbsp;
 <li><a href="topusers.php"><?php echo $Language->getText('top','highest_ranked_users'); ?></a>
 -->
-<li><a href="toplist.php?type=forumposts_week"><?php echo $Language->getText('top','forum_posts'); ?></a>
+
 </ul>
 
 <?php
